--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -119,7 +119,7 @@ FLEXI_CONTENTS_LIST="Selected contents"
 FLEXI_COPIES_NR="Number of copies"
 FLEXI_COPY_MOVE_DESTINATION="Destination"
 FLEXI_COPY_MOVE_OPTIONS="Copy/Move options"
-FLEXI_COPYMOVE="Copy & Move copies"
+FLEXI_COPYMOVE="Copy &amp; Move copies"
 FLEXI_COPY_MOVE="Copy/Move"
 FLEXI_COPY="Copy"
 FLEXI_COPYONLY="Copy only"
@@ -226,7 +226,7 @@ FLEXI_VERSION_RESTORED="Version %d has been restored"
 
 ; Types screen
 FLEXI_TYPE_DEFAULT_TEMPLATE="Default item layout (template)"
-FLEXI_TYPE_DEFAULT_TEMPLATE_DESC="This is the default item layout (template name) that will be used in item view to show the items of this type. <br/><br/>The <b>item layout</b> effects how the item is viewed since it defines the displayed fields, some layout spesific display parameters and contains a custom set of HTML/PHP & CSS/JS files"
+FLEXI_TYPE_DEFAULT_TEMPLATE_DESC="This is the default item layout (template name) that will be used in item view to show the items of this type. <br/><br/>The <b>item layout</b> effects how the item is viewed since it defines the displayed fields, some layout spesific display parameters and contains a custom set of HTML/PHP &amp; CSS/JS files"
 FLEXI_VIEW_FIELDS="view fields"
 FLEXI_VIEW_ITEMS="view items"
 ; Types screen (added beta4)
@@ -312,7 +312,7 @@ FLEXI_IMPORT="Import"
 FLEXI_IMPORT_TAGS="Import a list of tags"
 FLEXI_IMPORT_TAGS_DESC="Note::Please enter here the list of tags you wish to import. Each tag on a new line."
 FLEXI_IMPORT_TAGS_BUTTON="Import tag list"
-FLEXI_CLOSE_IMPORT_TAGS="Close & refresh"
+FLEXI_CLOSE_IMPORT_TAGS="Close &amp; refresh"
 FLEXI_NO_TAG_TO_IMPORT="There are no tags to import."
 FLEXI_TAG_IMPORT_SUCCESS="%d tags were successfully added."
 FLEXI_TAG_IMPORT_FAILED="%d were not added because they were already in the list."
@@ -1019,7 +1019,7 @@ FLEXI_PARAMETERS_ITEM_ADVANCED="Advanced"
 FLEXI_PARAMETERS_ITEM_SEO="SEO"
 
 FLEXI_PARAMETERS_CAT_BASIC="Parameters: Basic"
-FLEXI_PARAMETERS_CAT_INFO_OPTIONS="Parameters: <small>Category Info & Options</small>"
+FLEXI_PARAMETERS_CAT_INFO_OPTIONS="Parameters: <small>Category Info &amp; Options</small>"
 FLEXI_PARAMETERS_SUBCATS_INFO_OPTIONS="Parameters: <small>Sub-categories (1st sub-level)</small>"
 FLEXI_PARAMETERS_PEERCATS_INFO_OPTIONS="Parameters: <small>Peer-Categories (same-level)</small>"
 FLEXI_PARAMETERS_CAT_ITEMS_LIST="Parameters: <small>Items List Creation</small>"
@@ -1031,7 +1031,7 @@ FLEXI_PARAMETERS_CAT_SUBCATS_INFO_OPTIONS="Parameters: <small>Sub-categories (1s
 FLEXI_PARAMETERS_CAT_PEERCATS_INFO_OPTIONS="Parameters: <small>Peer-Categories (same-level)</small>"
 
 FLEXI_PARAMS_CAT_BASIC="Basic"
-FLEXI_PARAMS_CAT_INFO_OPTIONS="Category Info & Options"
+FLEXI_PARAMS_CAT_INFO_OPTIONS="Category Info &amp; Options"
 FLEXI_PARAMS_SUBCATS_INFO_OPTIONS="Sub-categories (1st sub-level)"
 FLEXI_PARAMS_PEERCATS_INFO_OPTIONS="Peer-Categories (same-level)"
 FLEXI_PARAMS_CAT_ITEMS_LIST="Items List Creation"
@@ -1196,7 +1196,7 @@ FLEXI_CONFIRM_VERSION_RESTORE="Are you sure you wish to load this version?"
 
 ; Added 1.5.1 stable
 FLEXI_FAST_SAVE="Fast save"
-FLEXI_SAVE_AND_NEW="Save & new"
+FLEXI_SAVE_AND_NEW="Save &amp; new"
 FLEXI_DELETE_TAG="Please click here to delete this tag."
 FLEXI_OVERRIDE_PAGETTITLE="Override &lt;&zwnj;title&zwnj;&gt;"
 FLEXI_OVERRIDE_PAGETTITLE_DESC="Setting this to yes, allows you to use the item title (or the custom title if set) as your page title (= HTML TITLE tag), instead of using the page title set in the menu item."
@@ -1344,7 +1344,7 @@ FLEXI_ORDERING_METHOD_DESC="Select to order alphanumerically (dictionary order) 
 FLEXI_ALPHANUMERIC="Alphanumeric"
 FLEXI_NUMERIC="Numeric"
 
-;Added 1.5.5 & 1.5.6 stable
+;Added 1.5.5 &amp; 1.5.6 stable
 FLEXI_FILTER_TYPES="Filterable field types"
 FLEXI_FILTER_TYPES_DESC="List of the filterable field types. DO NOT TOUCH except if you know exactly what you are doing ;)"
 FLEXI_AUTOLOGIN="Enable preview auto-login"
@@ -1717,11 +1717,11 @@ FLEXI_MENU_USE_TAGS="Use tags"
 FLEXI_MENU_USE_TAGS_DESC="Allow usage of tags in the frontend, for user groups that have the Can-Tags Privilege, note item can still have tags managed in the backend"
 
 FLEXI_MENU_USE_METADATA="Metadata Details"
-FLEXI_MENU_USE_METADATA_DESC="Recommended to hide or only allow -basic- META data (description and keywords), the rest will be unneccessary & confusing to the users"
+FLEXI_MENU_USE_METADATA_DESC="Recommended to hide or only allow -basic- META data (description and keywords), the rest will be unneccessary &amp; confusing to the users"
 FLEXI_MENU_USE_SEO_CONF="SEO Configuration"
 FLEXI_MENU_USE_SEO_CONF_DESC="Select here to allow user to edit SEO parameters, like custom page title tag"
 FLEXI_MENU_USE_PUBL_DETAILS="Publication Details"
-FLEXI_MENU_USE_PUBL_DETAILS_DESC="Select here to allow either:<br/><br/>-Basic- Publication Details:<br/> (start & finish publishing dates & author alias) to people that can -EDIT- the item.<br/>or<br/> -All- publication details:<br/> (item author & creation date) are available ONLY to Super Admin users."
+FLEXI_MENU_USE_PUBL_DETAILS_DESC="Select here to allow either:<br/><br/>-Basic- Publication Details:<br/> (start &amp; finish publishing dates &amp; author alias) to people that can -EDIT- the item.<br/>or<br/> -All- publication details:<br/> (item author &amp; creation date) are available ONLY to Super Admin users."
 FLEXI_MENU_USE_DISPLAY_DETAILS="Display Details"
 FLEXI_MENU_USE_DISPLAY_DETAILS_DESC="Select which item display parameters groups you want to be editable in the frontend"
 ;
@@ -1729,7 +1729,7 @@ FLEXI_MENU_TEMPLATE_SELECTION="Template Selection"
 FLEXI_MENU_TEMPLATE_SELECTION_DESC="Enable selection and configuration of template for frontend user groups with the Templates-Manage Privilege."
 FLEXI_MENU_YES_SELECT_TEMPLATE="Select *"
 FLEXI_MENU_YES_SELECT_CONFIGURE_TEMPLATE="Select and Configure *"
-FLEXI_MENU_YES_TEMPLATE_AND_DETAILS="Template & Details *"
+FLEXI_MENU_YES_TEMPLATE_AND_DETAILS="Template &amp; Details *"
 ;
 FLEXI_MENU_ONLY_DISPLAY="Display only"
 FLEXI_MENU_YES_BASIC="Basic"
@@ -1953,7 +1953,7 @@ FLEXI_OVERRIDE_CONF_YES="Yes, use parameters below"
 FLEXI_JOOMLA_DEFAULT="Joomla 's default"
 
 FLEXI_PARAMETERS_CAT_BASIC_OVERRIDE_CONF="Basic Parameters <small style='color:darkgreen;'>(enable override here)</small>"
-FLEXI_PARAMETERS_CAT_INFO_OPTIONS_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Category Info & Options</small>"
+FLEXI_PARAMETERS_CAT_INFO_OPTIONS_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Category Info &amp; Options</small>"
 FLEXI_PARAMETERS_CAT_ITEMS_LIST_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Items List Creation</small>"
 FLEXI_PARAMETERS_CAT_ITEM_FILTERING_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Alpha-Index, Search, Filters</small>"
 FLEXI_PARAMETERS_CAT_LAYOUT_OVERRIDE="<b style='color:darkgreen;'>override:</b> Layout Selection"
@@ -2292,7 +2292,7 @@ FLEXI_FAVS_VIEW_CONF="Favourites view"
 FLEXI_SEARCH_VIEW_CONF="Search view"
 FLEXI_ITEM_LISTS_CONF="Items Lists"
 FLEXI_BACKEND_TABS_CONF="Backend Managers"
-FLEXI_WORKFLOW_AND_NOTIFICATIONS_CONF="Workflow & notifications"
+FLEXI_WORKFLOW_AND_NOTIFICATIONS_CONF="Workflow &amp; notifications"
 FLEXI_WORKFLOW_BASIC_CONF="Basic Workflow"
 
 ; Global parameters additions
@@ -2420,7 +2420,7 @@ FLEXI_FORCE_DESKTOP_LAYOUT="Force desktop layout (*)"
 FLEXI_FORCE_DESKTOP_LAYOUT_DESC="This is useful to <b>exclude tablets</b> from using the mobile layout. <br/> -- Usually tablets have <b>both</b> a large screen and a decently large resolution (at least 800x480) <br/> -- You will need desktop layouts with a responsive design that looks/works well with 800x480 or higher resolution screens"
 FLEXI_TABLET_DETECTED="Tablet detected"
 
-FLEXI_DEBUG_MOBILE="Debug detection & status"
+FLEXI_DEBUG_MOBILE="Debug detection &amp; status"
 FLEXI_DEBUG_MOBILE_DESC="This will print detection or existing status messages in regards to mobile detection and usage"
 
 FLEXI_MOBILE_RES_LIMIT_DESKTOP_LAYOUT="Resolution limit for desktop layouts"
@@ -2521,7 +2521,7 @@ FLEXI_EDIT_HELP_LABEL_TOOLTIP_WICON="Label Tooltip with icon"
 FLEXI_EDIT_HELP_LABEL_TOOLTIP="Label Tooltip"
 FLEXI_EDIT_HELP_INLINE="Inline info box"
 
-; Strings for field properties related to text search and filtering (Backend Tabs: fields manager & search-indexes)
+; Strings for field properties related to text search and filtering (Backend Tabs: fields manager &amp; search-indexes)
 FLEXI_SELECT_FIELDS_TO_TOGGLE_PROPERTY="Select fields to toggle their property"
 FLEXI_FIELDS_TOGGLED_PROPERTY="Toggled property '%s' for - %s - Field(s). "
 FLEXI_FIELDS_TOGGLED_PROPERTY_FIELDS_SKIPPED="Skipped - %d - Field(s), (%d) due to not supporting the property, and (%d) due to being locked by another user"
@@ -2545,19 +2545,19 @@ FLEXI_FIELD_ADVANCED_FILTERABLE_DESC="Field will be <b>available as filter for l
 ;
 FLEXI_SEARCH_INDEXES="Search Indexes"
 FLEXI_INDEX_BASIC_CONTENT_LISTS="Re-Index Basic <br/><small>(Content Lists)</small>"
-FLEXI_INDEX_ADVANCED_SEARCH_VIEW="Re-Index Advanced <br/><small>(Search View)</small>"
-FLEXI_INDEX_ADVANCED_SEARCH_VIEW_DIRTY_ONLY="Re-Index Advanced<br/><small>(Search View: dirty only)</small>"
+FLEXI_INDEX_ADVANCED_SEARCH_VIEW="<a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced' class='modal'>Re-Index Advanced</a><br/><small>(Search View)</small>"
+FLEXI_INDEX_ADVANCED_SEARCH_VIEW_DIRTY_ONLY="<a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced&rebuildmode=quick' class='modal'>Re-Index Advanced</a><br/><small>(Search View: dirty only)</small>"
 FLEXI_INDEX_ADVANCED_PURGE="Purge Advanced Index"
-FLEXI_ALERT_UPDATE_BASIC_INDEX="- %s - field(s) have a 'dirty' property: <small>(Content Lists 'Text Search')</small> . Please recalculate the <a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&amp;view=search&amp;layout=indexer&amp;tmpl=component&amp;indexer=basic' class='modal'>-BASIC- Search Index</a> once !!!"
-FLEXI_ALERT_UPDATE_ADVANCED_INDEX="- %s - field(s) have a 'dirty' property: <small>(Search View 'Text Searchable OR Filterable')</small> . Please recalculate the -ADVANCED- Search Index once !!!"
+FLEXI_ALERT_UPDATE_BASIC_INDEX="- %s - field(s) have a 'dirty' property: <small>(Content Lists 'Text Search')</small> . Please recalculate the <a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=basic' class='modal'>-BASIC- Search Index</a> once !!!"
+FLEXI_ALERT_UPDATE_ADVANCED_INDEX="- %s - field(s) have a 'dirty' property: <small>(Search View 'Text Searchable OR Filterable')</small> . Please recalculate the <a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced' class='modal'>-ADVANCED- Search Index</a> NOW!"
 ;
 FLEXI_CLICK_TO_TOGGLE="click to toggle"
 FLEXI_TOGGLE_TEXT_SEARCHABLE="Text Search"
 FLEXI_TOGGLE_FILTERABLE="Filter"
 FLEXI_TOGGLE_ADV_TEXT_SEARCHABLE="Text Search <small>(search view)</small>"
 FLEXI_TOGGLE_ADV_FILTERABLE="Filter <small>(search view)</small>"
-FLEXI_FIELD_BASIC_INDEX_PROPERTY_DIRTY="Dirty (please rebuild basic search indexed)"
-FLEXI_FIELD_ADVANCED_INDEX_PROPERTY_DIRTY="Dirty (please rebuild advanced search indexed)"
+FLEXI_FIELD_BASIC_INDEX_PROPERTY_DIRTY="<a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=basic' class='modal'>Dirty</a> (please rebuild basic search indexed)"
+FLEXI_FIELD_ADVANCED_INDEX_PROPERTY_DIRTY="<a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href="index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced"  class='modal'>Dirty</a> (please rebuild advanced search indexed)"
 FLEXI_PROPERTY_NOT_SUPPORTED="Property not supported"
 FLEXI_REBUILD_SEARCH_INDEX="Rebuild Search Index"
 
@@ -2759,7 +2759,7 @@ FLEXI_NOCHAR_EMPTY_SEPARATOR="Empty (No characters)"
 FLEXI_MAX_TXT_LEN="Maximum Text Length"
 FLEXI_MAX_TXT_LEN_DESC="Maximum number of characters allowed during user input"
 
-FLEXI_VALUE_MASK_VALIDATE_CONF="Input value Masking & Validation"
+FLEXI_VALUE_MASK_VALIDATE_CONF="Input value Masking &amp; Validation"
 FLEXI_VALUE_MASK_VALIDATE_CONF_DESC="Parameters for both masking and validating user input"
 FLEXI_VALUE_VALIDATION_MASK="Value Validation Mask <br/><small>(Predefined Set)</small>"
 FLEXI_VALUE_VALIDATION_MASK_DESC="Select a validation mask from a predefined list of masks to be used during user input"
@@ -3267,8 +3267,8 @@ FLEXI_IF_EMPTY="If empty"
 ; Navigation sidebar
 FLEXI_NAV_SD_CONTENT_EDITING="Content editing"
 FLEXI_NAV_SD_CONTENT_VIEWING="Content viewing"
-FLEXI_NAV_SD_TYPES_N_FIELDS="Types & fields"
-FLEXI_NAV_SD_USERS_N_GROUPS="Users & Groups"
+FLEXI_NAV_SD_TYPES_N_FIELDS="Types &amp; fields"
+FLEXI_NAV_SD_USERS_N_GROUPS="Users &amp; Groups"
 FLEXI_NAV_SD_EXPERT_USAGE="Expert Usage"
 
 FLEXI_REQUIRES_FIELDGROUP_FIELD="Enable only if you have installed 'fieldgroup' field"
