--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -337,7 +337,7 @@ FLEXI_APPROVAL_REQUEST="Approval request"
 FLEXI_APPROVAL_REQUEST_INFO="Set item to pending Approval state, and notify appropriate publishers to review this content and approve it"
 
 FLEXI_TEXT_SEARCH="Text Search"
-FLEXI_FIELD_FILTERS="Attributes Filters"
+FLEXI_FIELD_FILTERS="Filters"
 FLEXI_TEXT_SEARCH_INFO="Enter a text to search in content title, content description and in content attributes (fields) that are marked as Text Searchable"
 FLEXI_FIELD_FILTERS_INFO="You can limit the listed content to those that match specific attributes (fields) values/ranges"
 FLEXI_PAGINATION="# per page"
