# Fixed jQuery UI autocomplete conflicting with Joomla autocomplete JS, cleaned some PHP notices occuring during CSV import task

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2557,7 +2557,7 @@ FLEXI_TOGGLE_FILTERABLE="Filter"
 FLEXI_TOGGLE_ADV_TEXT_SEARCHABLE="Text Search <small>(search view)</small>"
 FLEXI_TOGGLE_ADV_FILTERABLE="Filter <small>(search view)</small>"
 FLEXI_FIELD_BASIC_INDEX_PROPERTY_DIRTY="<a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=basic' class='modal'>Dirty</a> (please rebuild basic search indexed)"
-FLEXI_FIELD_ADVANCED_INDEX_PROPERTY_DIRTY="<a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href="index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced"  class='modal'>Dirty</a> (please rebuild advanced search indexed)"
+FLEXI_FIELD_ADVANCED_INDEX_PROPERTY_DIRTY="<a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced' class='modal'>Dirty</a> (please rebuild advanced search indexed)"
 FLEXI_PROPERTY_NOT_SUPPORTED="Property not supported"
 FLEXI_REBUILD_SEARCH_INDEX="Rebuild Search Index"
 
