# Minor fixes (recently added) backend search view listing basic index records, and minor changes to HTML of fields views

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -189,6 +189,7 @@ FLEXI_PUBLICATION_DETAILS="Publication Details"
 FLEXI_DRAFT_UNPUBLISHED="Draft unpublished"
 FLEXI_ENTER_TAG="Please enter tag name"
 FLEXI_ITEM_ID="Item ID"
+FLEXI_ITEM_TITLE="Item Title"
 FLEXI_ITEM_TYPE="Item type"
 FLEXI_METADATA_INFORMATION="Metadata"
 FLEXI_NEVER="Never"
@@ -2248,8 +2249,8 @@ FLEXI_SURE_TO_DELETE_FILE="You are about to delete this file, Are you sure ?"
 FLEXI_YES_REGARDLESS_SETTINGS="Yes, regardless settings"
 FLEXI_INDEX_BASIC="Index Basic"
 FLEXI_INDEX_ADVANCED="Index Advanced"
-FLEXI_INDEX_VALUE_COUNT="Value Count<br/><small>(for multi-value fields)</small>"
-FLEXI_INDEX_VALUE_ID="Value ID <br/><small>(for indexable values)</small>"
+FLEXI_INDEX_VALUE_COUNT="Value Count<br/><small>(multi-value fields)</small>"
+FLEXI_INDEX_VALUE_ID="Value ID <br/><small>(indexable values)</small>"
 FLEXI_COPY_WITH_VALUES="Copy with values"
 FLEXI_FILTER="Filter"
 
