+ Added support for category images in the categories module, including parameters for image source, thumbnailing, position and default image

--- a/modules/mod_flexicategories/languages/en-GB.mod_flexicategories.ini
+++ b/modules/mod_flexicategories/languages/en-GB.mod_flexicategories.ini
@@ -22,3 +22,38 @@ MOD_FLEXICATEGORIES_FIELD_SHOW_DESCRIPTION_LABEL="Category Descriptions"
 MOD_FLEXICATEGORIES_XML_DESCRIPTION="This module displays a list of categories from one parent category."
 MOD_FLEXICATEGORIES_TITLE_HEADING_LABEL="Heading Style"
 MOD_FLEXICATEGORIES_TITLE_HEADING_DESC="Set the heading style to use."
+
+
+FLEXI_USE_GLOBAL="Use Global"
+FLEXI_HIDE="Hide"
+FLEXI_SHOW="Show"
+FLEXI_NO="No"
+FLEXI_YES="Yes"
+
+MOD_FLEXICATEGORIES_SHOW_IMAGE="Show image"
+MOD_FLEXICATEGORIES_SHOW_IMAGE_DESC="Show/Hide image, also select image source"
+MOD_FLEXICATEGORIES_IMAGE_HEIGHT="Height"
+MOD_FLEXICATEGORIES_IMAGE_WIDTH="Width"
+
+MOD_FLEXICATEGORIES_CAT_IMAGE_SOURCE="Image source"
+MOD_FLEXICATEGORIES_CAT_IMAGE_SOURCE_DESC="Select the source of the image. You can either choose image defined in category parameters (if available) or automatically extract the first image found in the description"
+
+MOD_FLEXICATEGORIES_CAT_IMAGE_EXTRACT="Extract from description"
+MOD_FLEXICATEGORIES_CAT_IMAGE_USEPARAM="Use image parameter"
+MOD_FLEXICATEGORIES_CAT_IMAGE_BOTH="Try parameter then extract"
+
+MOD_FLEXICATEGORIES_LINK_IMAGE="Link image"
+MOD_FLEXICATEGORIES_LINK_IMAGE_DESC="Link image to category view"
+
+MOD_FLEXICATEGORIES_PROCESSING_METHOD="Processing method"
+MOD_FLEXICATEGORIES_PROCESSING_METHOD_DESC="Method of creating the image thumbnail, scale: scales to fit both dimensions, crop: scales the image and as soon as one dimension fits the other dimension is cropped to the given size"
+MOD_FLEXICATEGORIES_SCALE="Scale"
+MOD_FLEXICATEGORIES_CROP="Crop"
+
+MOD_FLEXICATEGORIES_IMAGE_POSITION="Image position"
+MOD_FLEXICATEGORIES_IMAGE_POSITION_DESC="The image position in the block"
+MOD_FLEXICATEGORIES_IMAGE_LEFT="Left"
+MOD_FLEXICATEGORIES_IMAGE_RIGHT="Right"
+
+MOD_FLEXICATEGORIES_DEFAULT_CATIMAGE="Default image"
+MOD_FLEXICATEGORIES_DEFAULT_CATIMAGE_DESC="Default image for categories without one"
