Update upload view, remove slider effect on upload button and add existing tab view, more clear for end user

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -392,6 +392,9 @@ FLEXI_FIELD_CONF_UPLOAD_MAX_LIMIT_DESC="Field configuration is limiting your upl
 FLEXI_SERVER_UPLOAD_MAX_LIMIT="Server maximum"
 FLEXI_SERVER_UPLOAD_MAX_LIMIT_DESC="Server PHP configuration variable '%s' is limiting your upload to this value"
 
+FLEXI_FILE_EXIST="Existing file"
+FLEXI_FILE_INFO="Infos"
+
 ; Statistics screen
 FLEXI_BEST_RATED="Best rated"
 FLEXI_EDIT_USER="Edit user"
