^ Some cleanups related to last commit, and added TABs to 'image' layout of the fileselement view

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -373,6 +373,9 @@ FLEXI_YOUR_ACCOUNT_CANNOT_UPLOAD="Your account does not have privelege to upload
 FLEXI_USAGE_IN="Usage in"
 FLEXI_REAL_PATH="Real path"
 
+FLEXI_FILEMAN_LIST="File list"
+FLEXI_FILEMAN_INFO="Info"
+
 FLEXI_CHOOSE_SRC_DIR="Select source directory"
 FLEXI_CHOOSE_SRC_DIR_DESC="Enter the path of the source directory from you joomla root. For security reasons, it must be within your joomla directory."
 FLEXI_ADD_DIR="Add files from directory"
@@ -391,9 +394,6 @@ FLEXI_FIELD_CONF_UPLOAD_MAX_LIMIT="Field maximum"
 FLEXI_FIELD_CONF_UPLOAD_MAX_LIMIT_DESC="Field configuration is limiting your upload to this value"
 FLEXI_SERVER_UPLOAD_MAX_LIMIT="Server maximum"
 FLEXI_SERVER_UPLOAD_MAX_LIMIT_DESC="Server PHP configuration variable '%s' is limiting your upload to this value"
-
-FLEXI_FILE_EXIST="Existing file"
-FLEXI_FILE_INFO="Infos"
 
 ; Statistics screen
 FLEXI_BEST_RATED="Best rated"
