# Added modal layout editing to backend listings of types, items, and categories

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -727,9 +727,9 @@ FLEXI_DISABLE_FRONTEND_CSS="Disable CSS"
 FLEXI_DISABLE_FRONTEND_CSS_DESC="Do not load the FLEXIcontent default CSS file (flexicontent.css). (Not recommended for inexperienced designers). <br/><br/><b>NOTE:</b> modules need and load this file(s), along with the module specific CSS, this is done because they may appear in non-FLEXIcontent views. There is a per module parameter to disable loading of CSS files"
 
 ; Category parameters
-FLEXI_CHOOSE_SPECIFIC_CATEGORY_LAYOUT_DESC="Set a specific category layout for this category (recommended)"
+FLEXI_CHOOSE_SPECIFIC_CATEGORY_LAYOUT_DESC="Set a specific category layout for this category"
 FLEXI_CHOOSE_SPECIFIC_CATEGORY_LAYOUT="Category layout"
-FLEXI_CHOOSE_SPECIFIC_CATITEMS_LAYOUT_DESC="Set a specific layout for all the items of this category (recommended)"
+FLEXI_CHOOSE_SPECIFIC_CATITEMS_LAYOUT_DESC="Set a specific layout for all the items of this category"
 FLEXI_CHOOSE_SPECIFIC_CATITEMS_LAYOUT="Item layout"
 FLEXI_CONTENT_LANGUAGE="Content Language"
 FLEXI_USE_GLOBAL="Use Global"
@@ -950,7 +950,7 @@ FLEXI_CAT_DESCRIPTION_DESC="Show/Hide the Category Description"
 FLEXI_CAT_DESCRIPTION="Category Description"
 FLEXI_CAT_IMAGE_DESC="Show/Hide the category image"
 FLEXI_CAT_IMAGE="Category image"
-FLEXI_CHOOSE_SPECIFIC_SUBCATEGORY_LAYOUT_DESC="Set a specific layout for all the sub-categories (recommended)"
+FLEXI_CHOOSE_SPECIFIC_SUBCATEGORY_LAYOUT_DESC="Set a specific layout for all the sub-categories"
 FLEXI_CHOOSE_SPECIFIC_SUBCATEGORY_LAYOUT="Sub categories layout"
 FLEXI_CUT_INTRO_DESC="Auto cut introtext after x characters"
 FLEXI_CUT_INTRO="Introtext max length"
@@ -1075,9 +1075,9 @@ FLEXI_LEADING_NUM_DESC="Leading items are placed before 'intro' items and have d
 ; Directory menu
 FLEXI_3_COLS="3 columns"
 FLEXI_4_COLS="4 columns"
-FLEXI_CHOOSE_SPECIFIC_DIRCATEGORY_LAYOUT_DESC="Set a specific layout for all categories and sub-categories from this directory (recommended)"
+FLEXI_CHOOSE_SPECIFIC_DIRCATEGORY_LAYOUT_DESC="Set a specific layout for all categories and sub-categories from this directory"
 FLEXI_CHOOSE_SPECIFIC_DIRCATEGORY_LAYOUT="Categories layout"
-FLEXI_CHOOSE_SPECIFIC_DIRITEMS_LAYOUT_DESC="Set a specific layout for all the items of this directory (recommended)"
+FLEXI_CHOOSE_SPECIFIC_DIRITEMS_LAYOUT_DESC="Set a specific layout for all the items of this directory"
 FLEXI_CHOOSE_SPECIFIC_DIRITEMS_LAYOUT="Item layout"
 FLEXI_COLUMN1_BLOCKS_COUNT="# blocks for col nr1"
 FLEXI_COLUMN1_BLOCKS_COUNT_DESC="Choose the number of blocks you wish to display in the first column. Note: 1 block represents the main category and its subcategories."
@@ -2017,7 +2017,7 @@ FLEXI_SHOW_USABILITY_MESSAGES="Show usability notices"
 FLEXI_SHOW_USABILITY_MESSAGES_DESC="Enable to show important usability messages once per user login session, at the top of the management areas (for items, fieds, etc)"
 FLEXI_USABILITY_MESSAGES_TURN_OFF="You can disable 'Usability notices' in Global Configuration"
 
-FLEXI_TMPL_NOT_SET_USING_TYPE_DEFAULT="Not Set. Using template defined by item's TYPE."
+FLEXI_TMPL_NOT_SET_USING_TYPE_DEFAULT="Using template defined by item's TYPE (recommended)."
 FLEXI_INLINE_ITEM_STATE_SELECTOR_DISABLED="The inline item state selector is disabled when you are displaying more than %d items"
 FLEXI_SORT_TO_GROUP_TRANSLATION="Click to sort this column and group associated translations together"
 FLEXI_MULTIPLE_ITEM_ORDERINGS="An item can have a different ordering number in every category that it is assigned to"
