+ Added ability to allow users to change their recent votes (browser window has not closed), made CSS of voting more specific, converted JS of voting from mootools to jQuery, fixed extendedweblink form property for autoprefixing absolute URLs

--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -31,6 +31,7 @@ FLEXI_POOR="Poor"
 FLEXI_REGULAR="Regular"
 FLEXI_REMOVE_FAVOURITE="Remove from your favourites"
 FLEXI_THANK_YOU_FOR_VOTING="Thank you for voting"
+FLEXI_YOUR_OLD_VOTING_WAS_CHANGED="Your old voting was changed"
 FLEXI_TO_WRITE="Draft"
 FLEXI_UNPUBLISHED="Unpublished"
 FLEXI_USERS="users"
