+ Added per component or type, custom field filters to the items manager also access level filter (only user allowed access levels will be shown)

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1896,8 +1896,10 @@ FLEXI_FIELD_VALUE_IS_INVALID="Field %s has invalid value."
 ; items manager configuration
 FLEXI_ITEMS_MANAGER="Items Manager"
 
-FLEXI_ITEMS_MANAGER_EXTRA_FIELDS="Custom Fields for Items List"
+FLEXI_ITEMS_MANAGER_EXTRA_FIELDS="Custom columns"
 FLEXI_ITEMS_MANAGER_EXTRA_FIELDS_DESC="Optionally include custom fields columns into the items list.<br/><br/><b>NOTE:</b> Do not to include custom fields that do not fit or will clutter the list, <br/><br/><b>NOTE:</b> Some fields will cause problems when displayed in backend, in such a case try using a more friendly display variable (default is 'display') OR remove them from the list., <br/><br/><b>NOTE:</b> You can customize this in every content type configuration. Per content type fields will be displayed, when you - filter - the items manager listing via the content type filter. <br/><br/><b>FORMAT:</b> fieldname1, fieldname2, fieldname3:dispname3, fieldname4:dispname4, fieldname5"
+FLEXI_ITEMS_MANAGER_CUSTOM_FILTERS_LIST="Custom filters"
+FLEXI_ITEMS_MANAGER_CUSTOM_FILTERS_LIST_DESC="Select custom fields to be added as items manager filters. <br/><br/> NOTE: the drop down selector shows supported field types"
 
 FLEXI_IMAN_LIST_VIEWABLE="List only viewable items"
 FLEXI_IMAN_LIST_VIEWABLE_DESC="Only viewable items will be listed to the current user <br/><br/><b>NOTE:</b> this setting is ignored for user with the 'Display all (items)' ACL privilege"
@@ -2895,12 +2897,12 @@ FLEXI_FORM_CORE_FIELDS_N_PROPS="CORE fields (&amp; properties)"
 FLEXI_NOT_PLACED_FIELDS_AND_DISABLING="- this is for CORE fields/properties, CUSTOM fields are always placed via field manager <br/> - any CORE fields/properties not added here, will be displayed at bottom of the page <br/> - to disable CORE fields/properties, do so via appropriate parameters"
 
 FLEXI_PLACEMENT_INSIDE_DEFAULT_TABS="Placement inside default TABs <br/> <small><b>NOTE 1:</b> Enter: _skip_ to hide the TAB, and leave it empty to restore its default value, </small> <br/> <small><b>NOTE 2:</b> not placed CORE properties will be added below the TABs and cause a warning to be shown</small>"
-FLEXI_PLACEMENT_VIA_FIELDS_MANAGER="Placement via Fields manager <br/><small><b>NOTE 1:</b> Copy above names here and then order by using CORE or 'CORE property' fields (create 'core property' fields for properties not having a CORE field)</small> <br/> <small><b>NOTE 2:</b> fields manager support: TABs, fieldsets, and custom HTML (via a special item form field)</small>"
+FLEXI_PLACEMENT_VIA_FIELDS_MANAGER="Placement via Fields manager <br/><small><b>NOTE 1:</b> Copy above names here and then order by using CORE or 'CORE property' fields (create 'core property' fields (in fields manager) for properties not having a CORE field)</small> <br/> <small><b>NOTE 2:</b> fields manager support: TABs, fieldsets, and custom HTML (via a special item form field)</small>"
 
 FLEXI_ABOVE_TABS="Above TABs"
 FLEXI_BELOW_TABS="Below TABs"
 FLEXI_HANDLED_BY_FIELDS_MANAGER="via CORE or 'CORE property' fields"
-FLEXI_HANDLED_BY_FIELDS_MANAGER_DESC="Fields added here will be placed by the fields manager, note: create a 'CORE property' field for every CORE property not having already a CORE field"
+FLEXI_HANDLED_BY_FIELDS_MANAGER_DESC="Fields added here will be placed by the fields manager, note: create a 'CORE property' field in FIELDS manager for every CORE property not having already a CORE field"
 
 FLEXI_COMMA_LIST_OF_CORE_FIELDS_PROPS="Enter a comma separated list of core fields or core property field"
 FLEXI_FORM_TAB_TITLES="Tab titles"
