# Improved categories adding proper handling for multi-category view, display selected categories and their childs, also removed tree root (category itself) from single category view as it makes no sense since it is same an empty filter, finally added better padding. For previous commit change items manager to show all view access levels instead of user-assigned (issue with multi-sites), finally some minor CSS fixes for search module

--- a/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
+++ b/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
@@ -142,4 +142,4 @@ FLEXI_ADD_DEFAULT_CSS_DESC="Add FLEXIcontent Default CSS for this module"
 ; FRONTEND
 FLEXI_ADV_MOD_SEARCH_PROMPT="Search ..."
 FLEXI_ADV_MOD_GO="Go"
-FLEXI_ADV_MOD_ADVANCED_SEARCH="Advanced search"
+FLEXI_ADV_MOD_ADVANCED_SEARCH="Advanced"
