^ Converted items / manager "copy/move" task to be more like a general "Batch" task, allowing it (besides main/secondary categories) to also change: language, state, content type, access

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -118,12 +118,15 @@ FLEXI_ADD_SUFFIX="Add suffix to title"
 FLEXI_CONTENTS_LIST="Selected contents"
 FLEXI_COPIES_NR="Number of copies"
 FLEXI_COPY_MOVE_DESTINATION="Destination"
-FLEXI_COPY_MOVE_OPTIONS="Copy/Move options"
-FLEXI_COPYMOVE="Copy &amp; Move copies"
-FLEXI_COPY_MOVE="Copy/Move"
+FLEXI_BATCH_OPTIONS="Batch options"
+FLEXI_COPY_UPDATE_OPTIONS="Copy / Update options"
+FLEXI_COPYUPDATE="Copy &amp; update"
+;FLEXI_COPYMOVE="Copy &amp; Move"
+;FLEXI_COPY_MOVE="Copy/Move"
+FLEXI_BATCH="Batch"
 FLEXI_COPY="Copy"
-FLEXI_COPYONLY="Copy only"
-FLEXI_COPYMOVE_ITEM="Items copy/move"
+FLEXI_COPY_OPTIONS="Copy Options"
+;FLEXI_COPYMOVE_ITEM="Items copy/move"
 FLEXI_DEFAULT_PREFIX="[copy]"
 FLEXI_KEEP_SEC_CATS="Keep secondary categories"
 FLEXI_KEEP_TAGS="Keep tags"
@@ -1839,7 +1842,7 @@ FLEXI_ORIGINAL_CONTENT_ALL_LANGS="Current content item is content for ALL langua
 FLEXI_TRANSLATE_ITEM="Translate Item(s)"
 FLEXI_DUPLICATEORIGINAL="Duplicate Original content"
 FLEXI_USE_JF_FL_DATA="Import Falang / Joomfish"
-FLEXI_USE_JF_FL_DATA_INFO="<small>* this will try: <br/>(a) Falang then <br/>(b) J1.5 Joomfish Tables with default DB prefix then <br/>(c) J1.5 Joomfish Tables with 'jos_' DB prefix</small>"
+FLEXI_USE_JF_FL_DATA_INFO="* this will try: (a) Falang then (b) J1.5 Joomfish Tables with default DB prefix then (c) J1.5 Joomfish Tables with 'jos_' DB prefix"
 FLEXI_AUTO_TRANSLATION="Automatic translation"
 FLEXI_FIRST_JF_FL_THEN_AUTO="JF/FL import first then Auto"
 FLEXI_TRANSLATE_OPTIONS="Translations Options"
