--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -498,3 +498,7 @@ FLEXI_LAYOUT_INFO="Switch to between available layouts"
 FLEXI_FORM_NO_MAIN_CAT_ALLOWED="Category selector is empty: <br>- either this content type uses categories that are not allowed to you, <br/>- or given categories are not allowed for this content type"
 
 FLEXI_PAGETITLE_SEPARATOR="%1$s - %2$s"
+
+; v3.0 Favoured improvements
+FLEXI_FAVS_YOU_HAVE_SUBSCRIBED="You have subscribed"
+FLEXI_FAVS_CLICK_TO_SUBSCRIBE="Click to subscribe"
